bindings/csharp/NativeMethods.cs

/// <summary>
/// File: NativeMethods.cs
/// NativeMethods binding types and helpers.
/// </summary>
using System;
using System.Runtime.InteropServices;

namespace PnF
{
    internal static class NativeMethods
    {
        private const string DllName = "pnf_native";

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_version_string API.
        /// </summary>
        /// <summary>
        /// pnf_version_string API.
        /// </summary>
        /// <returns></returns>
        public static extern IntPtr pnf_version_string();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_version_major API.
        /// </summary>
        /// <summary>
        /// pnf_version_major API.
        /// </summary>
        /// <returns></returns>
        public static extern int pnf_version_major();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_version_minor API.
        /// </summary>
        /// <summary>
        /// pnf_version_minor API.
        /// </summary>
        /// <returns></returns>
        public static extern int pnf_version_minor();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_version_patch API.
        /// </summary>
        /// <summary>
        /// pnf_version_patch API.
        /// </summary>
        /// <returns></returns>
        public static extern int pnf_version_patch();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_config_default API.
        /// </summary>
        /// <summary>
        /// pnf_chart_config_default API.
        /// </summary>
        /// <returns></returns>
        public static extern ChartConfig pnf_chart_config_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_indicator_config_default API.
        /// </summary>
        /// <summary>
        /// pnf_indicator_config_default API.
        /// </summary>
        /// <returns></returns>
        public static extern IndicatorConfig pnf_indicator_config_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_create API.
        /// </summary>
        /// <summary>
        /// pnf_chart_create API.
        /// </summary>
        /// <param name="config"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_chart_create(ref ChartConfig config);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_create_default API.
        /// </summary>
        /// <summary>
        /// pnf_chart_create_default API.
        /// </summary>
        /// <returns></returns>
        public static extern IntPtr pnf_chart_create_default();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_destroy API.
        /// </summary>
        /// <summary>
        /// pnf_chart_destroy API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern void pnf_chart_destroy(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_add_data API.
        /// </summary>
        /// <summary>
        /// pnf_chart_add_data API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="high"></param>
        /// <param name="low"></param>
        /// <param name="close"></param>
        /// <param name="timestamp"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_add_data(IntPtr chart, double high, double low, double close, long timestamp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_add_price API.
        /// </summary>
        /// <summary>
        /// pnf_chart_add_price API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="price"></param>
        /// <param name="timestamp"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_add_price(IntPtr chart, double price, long timestamp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_add_ohlc API.
        /// </summary>
        /// <summary>
        /// pnf_chart_add_ohlc API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="ohlc"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_add_ohlc(IntPtr chart, ref OHLC ohlc);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_column_count API.
        /// </summary>
        /// <summary>
        /// pnf_chart_column_count API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_chart_column_count(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_x_column_count API.
        /// </summary>
        /// <summary>
        /// pnf_chart_x_column_count API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_chart_x_column_count(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_o_column_count API.
        /// </summary>
        /// <summary>
        /// pnf_chart_o_column_count API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_chart_o_column_count(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_box_size API.
        /// </summary>
        /// <summary>
        /// pnf_chart_box_size API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern double pnf_chart_box_size(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_column_type API.
        /// </summary>
        /// <summary>
        /// pnf_chart_column_type API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="index"></param>
        /// <returns></returns>
        public static extern ColumnType pnf_chart_column_type(IntPtr chart, UIntPtr index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_column_box_count API.
        /// </summary>
        /// <summary>
        /// pnf_chart_column_box_count API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="index"></param>
        /// <returns></returns>
        public static extern UIntPtr pnf_chart_column_box_count(IntPtr chart, UIntPtr index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_column_highest API.
        /// </summary>
        /// <summary>
        /// pnf_chart_column_highest API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="index"></param>
        /// <returns></returns>
        public static extern double pnf_chart_column_highest(IntPtr chart, UIntPtr index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_column_lowest API.
        /// </summary>
        /// <summary>
        /// pnf_chart_column_lowest API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="index"></param>
        /// <returns></returns>
        public static extern double pnf_chart_column_lowest(IntPtr chart, UIntPtr index);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_box_price API.
        /// </summary>
        /// <summary>
        /// pnf_chart_box_price API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="colIndex"></param>
        /// <param name="boxIndex"></param>
        /// <returns></returns>
        public static extern double pnf_chart_box_price(IntPtr chart, UIntPtr colIndex, UIntPtr boxIndex);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_box_type API.
        /// </summary>
        /// <summary>
        /// pnf_chart_box_type API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="colIndex"></param>
        /// <param name="boxIndex"></param>
        /// <returns></returns>
        public static extern BoxType pnf_chart_box_type(IntPtr chart, UIntPtr colIndex, UIntPtr boxIndex);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        /// <summary>
        /// pnf_chart_box_marker API.
        /// </summary>
        /// <summary>
        /// pnf_chart_box_marker API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="colIndex"></param>
        /// <param name="boxIndex"></param>
        /// <returns></returns>
        public static extern IntPtr pnf_chart_box_marker(IntPtr chart, UIntPtr colIndex, UIntPtr boxIndex);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_has_bullish_bias API.
        /// </summary>
        /// <summary>
        /// pnf_chart_has_bullish_bias API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_has_bullish_bias(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_has_bearish_bias API.
        /// </summary>
        /// <summary>
        /// pnf_chart_has_bearish_bias API.
        /// </summary>
        /// <param name="chart"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_has_bearish_bias(IntPtr chart);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_is_above_bullish_support API.
        /// </summary>
        /// <summary>
        /// pnf_chart_is_above_bullish_support API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="price"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_is_above_bullish_support(IntPtr chart, double price);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        /// <summary>
        /// pnf_chart_is_below_bearish_resistance API.
        /// </summary>
        /// <summary>
        /// pnf_chart_is_below_bearish_resistance API.
        /// </summary>
        /// <param name="chart"></param>
        /// <param name="price"></param>
        /// <returns></returns>
        public static extern bool pnf_chart_is_below_bearish_resistance(IntPtr chart, double price);
